--- a/window.shopper/Base.lproj/Main.storyboard
+++ b/window.shopper/Base.lproj/Main.storyboard
@@ -34,8 +34,8 @@
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Item Price" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5eX-7i-lU4" customClass="CurrencyTxtField" customModule="window_shopper" customModuleProvider="target">
-                                <rect key="frame" x="36" y="213" width="303" height="40"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Item Price" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5eX-7i-lU4" customClass="CurrencyTxtField" customModule="window_shopper" customModuleProvider="target">
+                                <rect key="frame" x="36" y="215" width="303" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="5yF-0o-R3k"/>
                                 </constraints>
@@ -50,27 +50,61 @@
                                     <constraint firstAttribute="width" constant="60" id="8vi-lQ-ndy"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="32" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pX2-u2-cYS">
+                                <rect key="frame" x="36" y="280" width="303" height="71.5"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="52"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hours" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Er4-Qs-5kw">
+                                <rect key="frame" x="167" y="356.5" width="41" height="21"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eqA-Ho-CEt">
+                                <rect key="frame" x="16" y="611" width="343" height="36"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <state key="normal" title="Clear Caculator">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="clearCalculatorPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="F6e-BB-WbX"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5Iu-c4-Dlx" secondAttribute="trailing" id="1Lw-tM-z2D"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Crv-rZ-nYy" secondAttribute="trailing" constant="36" id="3VS-ga-m8A"/>
                             <constraint firstItem="5Iu-c4-Dlx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="5PU-8f-g08"/>
+                            <constraint firstItem="Er4-Qs-5kw" firstAttribute="centerX" secondItem="pX2-u2-cYS" secondAttribute="centerX" id="6Do-lc-0zD"/>
                             <constraint firstItem="5eX-7i-lU4" firstAttribute="leading" secondItem="Crv-rZ-nYy" secondAttribute="leading" id="6kv-4w-wJh"/>
                             <constraint firstItem="Crv-rZ-nYy" firstAttribute="top" secondItem="e9A-lU-zcr" secondAttribute="bottom" constant="35" id="6pt-ux-no0"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5Iu-c4-Dlx" secondAttribute="bottom" id="8Sd-nj-87B"/>
+                            <constraint firstItem="pX2-u2-cYS" firstAttribute="trailing" secondItem="5eX-7i-lU4" secondAttribute="trailing" id="9nR-zv-MNA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eqA-Ho-CEt" secondAttribute="trailing" constant="16" id="IOb-4f-cvZ"/>
+                            <constraint firstItem="eqA-Ho-CEt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="OWp-14-Qh0"/>
                             <constraint firstItem="5eX-7i-lU4" firstAttribute="height" secondItem="Crv-rZ-nYy" secondAttribute="height" id="T4D-Xy-w89"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="eqA-Ho-CEt" secondAttribute="bottom" constant="20" id="Vy3-EP-BwZ"/>
                             <constraint firstItem="Crv-rZ-nYy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="36" id="YD7-WK-eo8"/>
+                            <constraint firstItem="Er4-Qs-5kw" firstAttribute="top" secondItem="pX2-u2-cYS" secondAttribute="bottom" constant="5" id="YIG-AX-UKW"/>
                             <constraint firstItem="5eX-7i-lU4" firstAttribute="trailing" secondItem="Crv-rZ-nYy" secondAttribute="trailing" id="YnS-T4-Fq5"/>
                             <constraint firstItem="e9A-lU-zcr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bTx-eu-ZDp"/>
+                            <constraint firstItem="pX2-u2-cYS" firstAttribute="centerX" secondItem="5eX-7i-lU4" secondAttribute="centerX" id="bhz-tn-wmg"/>
+                            <constraint firstItem="pX2-u2-cYS" firstAttribute="leading" secondItem="5eX-7i-lU4" secondAttribute="leading" id="bjH-3S-hWC"/>
                             <constraint firstItem="e9A-lU-zcr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="35" id="fUA-vP-5O2"/>
+                            <constraint firstItem="pX2-u2-cYS" firstAttribute="top" secondItem="5eX-7i-lU4" secondAttribute="bottom" constant="25" id="gAC-fK-mbe"/>
+                            <constraint firstItem="eqA-Ho-CEt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nVT-G8-A3c"/>
                             <constraint firstItem="5Iu-c4-Dlx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="poS-BN-A3a"/>
                             <constraint firstItem="5eX-7i-lU4" firstAttribute="top" secondItem="Crv-rZ-nYy" secondAttribute="bottom" constant="25" id="r2f-3N-C1j"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="hoursLbl" destination="Er4-Qs-5kw" id="SN5-ct-h3V"/>
                         <outlet property="priceTxt" destination="5eX-7i-lU4" id="p3d-HW-w9W"/>
+                        <outlet property="resultLbl" destination="pX2-u2-cYS" id="Plj-Kw-8pv"/>
                         <outlet property="wageTxt" destination="Crv-rZ-nYy" id="oFX-Qa-hHU"/>
                     </connections>
                 </viewController>
